--- a/style.css
+++ b/style.css
@@ -52,11 +52,11 @@ body {
 }
 /* SEÇÕES */
 .secao {
-  background-color: rgb(250, 223, 173);
+  background-color: #d8cfc4;
   display: flex;
   /* gap: 20px; */
   margin-bottom: 40px;
-  align-items: center;
+  align-items: stretch;
 }
 .secao img {
   width: 400px;
@@ -66,9 +66,9 @@ body {
   margin-bottom: 10px;
 }
 .secao-conteudo {
-  height: 250px;
-  width: 100%;
-  background-color: #d8cfc4;
+  padding: 10px;
+  border-left: 6px solid #b17754;
+  flex: 1;
 }
 /* FOOTER */
 .footer {
